@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Better handling of recurring timers
 
 0.001     2015-01-02 14:04:37-05:00 America/New_York
   - First release
